catarina 1.0.1 + documentation added, safirial-icons 0.1.0 + documentation added, safirial documentation added, playground documentation added

--- a/projects/catarina/package.json
+++ b/projects/catarina/package.json
@@ -1,6 +1,18 @@
 {
   "name": "catarina",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "description": "Angular 20.3.0 UI Design System, preview: https://jpcn-portfolio.vercel.app/catarina-preview",
+  "keywords": ["angular", "design-system", "ui", "components", "hydenaky"],
+  "author": "hydenaky",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hydenaky/library-workspace"
+  },
+  "bugs": {
+    "url": "https://github.com/Hydenaky/library-workspace/issues"
+  },
+  "homepage": "https://github.com/Hydenaky/library-workspace/blob/main/README.md",
   "peerDependencies": {
     "@angular/common": "^20.3.0",
     "@angular/core": "^20.3.0"
