--- a/projects/safirial-icons/package.json
+++ b/projects/safirial-icons/package.json
@@ -1,6 +1,18 @@
 {
   "name": "safirial-icons",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "description": "SVG icon asset package for Angular applications, especifically designed for catarina (https://jpcn-portfolio.vercel.app/catarina-preview). This package uses free svg online resources from heroicons(https://heroicons.com/outline) and svg repo(https://www.svgrepo.com/).",
+  "keywords": ["angular", "icons", "svg", "assets", "ui", "design-system", "safirial"],
+  "author": "hydenaky",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hydenaky/library-workspace"
+  },
+  "bugs": {
+    "url": "https://github.com/Hydenaky/library-workspace/issues"
+  },
+  "homepage": "https://github.com/Hydenaky/library-workspace/blob/main/README.md",
   "peerDependencies": {
     "@angular/common": "^20.3.0",
     "@angular/core": "^20.3.0"
