--- a/projects/catarina/package.json
+++ b/projects/catarina/package.json
@@ -1,9 +1,9 @@
 {
   "name": "catarina",
-  "version": "1.0.1",
+  "version": "1.1.2",
   "description": "Angular 20.3.0 UI Design System, preview: https://jpcn-portfolio.vercel.app/catarina-preview",
   "keywords": ["angular", "design-system", "ui", "components", "hydenaky"],
-  "author": "hydenaky",
+  "author": "Juan Pablo Cañon N. (Hydenaky)",
   "license": "MIT",
   "repository": {
     "type": "git",
